--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#288C53</color>
+    <color name="colorPrimaryDark">#465129</color>#465129
+    <color name="colorAccent">#3d8b5f</color>
+
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#ABABAB</color>
+    <color name="colorTranslate">#00000000</color>
+    <color name="colorBlack">#000000</color>
+
 </resources>
