--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content">
             <Button
                 android:layout_marginRight="1dp"
-                android:id="@+id/btnRegister"
+                android:id="@+id/btn_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
