--- a/app/src/main/res/layout/activity_military_world.xml
+++ b/app/src/main/res/layout/activity_military_world.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_military_world"
     android:layout_width="match_parent"
@@ -7,84 +8,97 @@
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.military.MilitaryWorldActivity">
 
+    <com.soldiersoul.wutu.views.TopBar
+        android:id="@+id/activity_military_world_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+    </com.soldiersoul.wutu.views.TopBar>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="back"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="军事天地"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:paddingLeft="50dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="新闻"
-            android:textSize="24sp"
-            android:gravity="center"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="新闻"
-            android:textSize="24sp"
-            android:gravity="center"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="新闻"
-            android:textSize="24sp"
-            android:gravity="center"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="340dp">
-        <TextView
+            android:layout_weight="1"
+            android:background="@drawable/btn_selector"
+            android:layout_margin="2dp"
+            android:text="征兵宣传"/>
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="征兵报名"
-            android:textSize="24sp" />
-        <TextView
+            android:background="@drawable/btn_selector"
+            android:layout_margin="2dp"
+            android:text="军事知识小贴士"/>
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="上传"
-            android:textSize="24sp" />
-        <TextView
+            android:background="@drawable/btn_selector"
+            android:layout_margin="2dp"
+            android:text="军事新闻"/>
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="收藏"
-            android:textSize="24sp" />
+            android:background="@drawable/btn_selector"
+            android:layout_margin="2dp"
+            android:text="武器装备展示"/>
+
     </LinearLayout>
+
+
+    <cn.bingoogolapple.bgabanner.BGABanner
+        android:id="@+id/banner_guide_content1"
+        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:banner_pointAutoPlayAble="true"
+        app:banner_pointTopBottomMargin="5dp"
+        app:banner_transitionEffect="defaultEffect"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
+    <cn.bingoogolapple.bgabanner.BGABanner
+        android:id="@+id/banner_guide_content2"
+        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:banner_pointAutoPlayAble="true"
+        app:banner_pointTopBottomMargin="5dp"
+        app:banner_transitionEffect="depth"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
+    <cn.bingoogolapple.bgabanner.BGABanner
+        android:id="@+id/banner_guide_content3"
+        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:banner_pointAutoPlayAble="true"
+        app:banner_pointTopBottomMargin="5dp"
+        app:banner_transitionEffect="cube"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
+    <cn.bingoogolapple.bgabanner.BGABanner
+        android:id="@+id/banner_guide_content4"
+        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:banner_pointAutoPlayAble="true"
+        app:banner_pointTopBottomMargin="5dp"
+        app:banner_transitionEffect="alpha"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
 
 </LinearLayout>
