--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
-<RelativeLayout
-    android:id="@+id/main_layout"
-=======
 <LinearLayout
->>>>>>> Chan
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,55 +7,43 @@
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.home.MainActivity">
 
-<<<<<<< HEAD
-    <com.soldiersoul.wutu.views.BottomBar
-        android:id="@+id/bottomBar"
-        android:background="@color/colorWhite"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="?attr/actionBarSize">
-
-    </com.soldiersoul.wutu.views.BottomBar>
-
     <!--<android.support.v7.widget.Toolbar-->
-        <!--android:padding="6dp"-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="@color/colorPrimary"-->
-        <!--android:elevation="4dp"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
-        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
+    <!--android:padding="6dp"-->
+    <!--android:id="@+id/toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:background="@color/colorPrimary"-->
+    <!--android:elevation="4dp"-->
+    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
 
-        <!--<ImageView-->
-            <!--android:id="@+id/avatar"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@mipmap/ic_launcher"/>-->
+    <!--<ImageView-->
+    <!--android:id="@+id/avatar"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@mipmap/ic_launcher"/>-->
 
-        <!--<TextView-->
-            <!--style="@style/TextAppearance.AppCompat.Title"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:text="@string/military_world"-->
-            <!--android:textColor="@color/colorWhite"/>-->
+    <!--<TextView-->
+    <!--style="@style/TextAppearance.AppCompat.Title"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:text="@string/military_world"-->
+    <!--android:textColor="@color/colorWhite"/>-->
 
-        <!--<include-->
-            <!--android:id="@+id/location"-->
-            <!--layout="@layout/location_layout"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="right"/>-->
+    <!--<include-->
+    <!--android:id="@+id/location"-->
+    <!--layout="@layout/location_layout"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="right"/>-->
     <!--</android.support.v7.widget.Toolbar>-->
-</RelativeLayout>
-=======
     <FrameLayout
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
 
     <com.soldiersoul.wutu.views.BottomBar
         android:id="@+id/bottomBar"
@@ -71,4 +54,3 @@
 
     </com.soldiersoul.wutu.views.BottomBar>
 </LinearLayout>
->>>>>>> Chan
