--- a/app/src/main/res/layout/fragment_military.xml
+++ b/app/src/main/res/layout/fragment_military.xml
@@ -1,12 +1,3 @@
-<<<<<<< HEAD
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-=======
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,18 +6,13 @@
     tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
 
     <include
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        layout="@layout/toolbar"/>
+        android:layout_height="?actionBarSize"/>
 
->>>>>>> Chan
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="军事天地"/>
 
-<<<<<<< HEAD
-</FrameLayout>
-=======
 </RelativeLayout>
->>>>>>> Chan
