--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -19,7 +19,7 @@
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
-        style="@style/TextAppearance.AppCompat.Title"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
