--- a/app/src/main/res/layout/fragment_military.xml
+++ b/app/src/main/res/layout/fragment_military.xml
@@ -1,8 +1,9 @@
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
 
     <include
@@ -10,9 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="军事天地"/>
+    <include layout="@layout/scrolltab_military_world"/>
 
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_military_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
