--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#ABABAB</color>
+    <color name="colorLight">#56ceae</color>
     <color name="colorTranslate">#00000000</color>
     <color name="colorBlack">#000000</color>
 
