--- a/app/src/main/res/layout/fragment_military_weapons_fragment.xml
+++ b/app/src/main/res/layout/fragment_military_weapons_fragment.xml
@@ -4,6 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.soldiersoul.wutu.military.Military_weapons_fragment">
 
-    <include layout="@layout/banner_military_fragment"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="需要后续讨论，加入AR效果"/>
 
 </FrameLayout>
