--- a/app/src/main/res/layout/fragment_military_advertise_fragment.xml
+++ b/app/src/main/res/layout/fragment_military_advertise_fragment.xml
@@ -1,9 +1,69 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.military.Military_advertise_fragment">
+    android:orientation="vertical"
+    tools:context="com.soldiersoul.wutu.military.MilitaryAdFragment">
 
-    <include layout="@layout/banner_military_fragment"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/ad_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-</FrameLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="学校宣传"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="福利宣传"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_toRightOf="@id/ad_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="国家宣传"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="政策宣传"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+    <cn.bingoogolapple.bgabanner.BGABanner
+        android:id="@+id/banner_guide_content1"
+        style="@style/MatchMatch"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:banner_pointAutoPlayAble="true"
+        app:banner_pointTopBottomMargin="5dp"
+        app:banner_transitionEffect="defaultEffect"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="以下内容未定，后续修改"
+        android:layout_marginTop="30dp"
+        android:textSize="24sp"/>
+
+</LinearLayout>
