--- a/app/src/main/res/layout/fragment_military_news_fragment.xml
+++ b/app/src/main/res/layout/fragment_military_news_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.military.Military_news_fragment">
+    tools:context="com.soldiersoul.wutu.military.MilitaryNewsFragment">
 
     <cn.bingoogolapple.bgabanner.BGABanner
         android:id="@+id/banner_guide_content1"
