--- a/app/src/main/res/layout/activity_honor.xml
+++ b/app/src/main/res/layout/activity_honor.xml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_honor"
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.soldiersoul.wutu.society.HonorActivity">
+    tools:context="com.soldiersoul.wutu.society.HonorActivity"
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/activity_honor"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="每日之星"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <me.crosswall.lib.coverflow.core.PagerContainer
+            android:id="@+id/pcDailyStar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorTranslate">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vpDailyStar"
+                android:layout_width="180dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center">
+
+            </android.support.v4.view.ViewPager>
+
+        </me.crosswall.lib.coverflow.core.PagerContainer>
+
+        <TextView
+            android:textSize="20sp"
+            android:id="@+id/tvDailyStar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+        <TextView
+            android:text="优秀社员"
+            android:layout_marginTop="20dp"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <me.crosswall.lib.coverflow.core.PagerContainer
+            android:id="@+id/pcGoodMember"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorTranslate">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vpGoodMember"
+                android:layout_width="180dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center">
+
+            </android.support.v4.view.ViewPager>
+
+        </me.crosswall.lib.coverflow.core.PagerContainer>
+
+        <TextView
+            android:textSize="20sp"
+            android:id="@+id/tvGoodMember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+</ScrollView>
