--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.manage.ManageFragment">
+    tools:context="com.soldiersoul.wutu.weapon.ManageFragment">
 
     <TextView
         android:layout_width="match_parent"
