修改军事界面

--- a/app/src/main/res/layout/fragment_military.xml
+++ b/app/src/main/res/layout/fragment_military.xml
@@ -6,18 +6,53 @@
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
 
-    <include
-        layout="@layout/toolbar"
+    <!--<include-->
+        <!--layout="@layout/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?actionBarSize"/>-->
+
+    <!--<include layout="@layout/scrolltab_military_world"/>-->
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/viewpager_military_fragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+    <!--</android.support.v4.view.ViewPager>-->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"/>
+        android:layout_height="64dp">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/advertise"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/policy"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/welfare"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/city"/>
+    </LinearLayout>
 
-    <include layout="@layout/scrolltab_military_world"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_military_fragment"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.v4.view.ViewPager>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
