--- a/app/src/main/res/layout/fragment_society.xml
+++ b/app/src/main/res/layout/fragment_society.xml
@@ -156,11 +156,29 @@
 
 <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 <!--</LinearLayout>-->
-<RelativeLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tl="http://schemas.android.com/apk/res-auto">
 
+    <com.flyco.tablayout.SlidingTabLayout
+        android:id="@+id/tl"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimary"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        tl:tl_indicator_color="@color/colorPrimaryDark"
+        tl:tl_indicator_corner_radius="5dp"
+        tl:tl_indicator_margin_left="2dp"
+        tl:tl_indicator_margin_right="2dp"
+        tl:tl_indicator_style="BLOCK"/>
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vpSociety"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-
-</RelativeLayout>
+</LinearLayout>
